data/all_generated_tests/raw_wast_tests/br_if_UnreachableCodeExecution_1495.wast
;; 6. **Test 6**: Use dynamic value manipulation to create a condition where `br_if` branches to `unreachable`. Change the stack values at runtime and see if the `pushTypes` and `popE` operations correctly handle the dynamic changes before potentially reaching `unreachable`.

(assert_invalid
  (module
    (func $dynamic-stack-test
      (block (result i32)
        (i32.const 42)
        (set_local 0)
        (get_local 0)
        (i32.const 1)
        (i32.add)
        (br_if 0 (i32.const 0))
        (unreachable)
      )
    )
  )
  "type mismatch"
)